--- a/TPGetGameLib.cbp
+++ b/TPGetGameLib.cbp
@@ -15,7 +15,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-DSFML_STATIC" />
-					<Add directory="../../../../../Program Files/SFML/include" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics-s" />
@@ -25,7 +25,7 @@
 					<Add library="winmm" />
 					<Add library="gdi32" />
 					<Add library="freetype" />
-					<Add directory="../../../../../Program Files/SFML/lib" />
+					<Add directory="lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
